feat(content): implement autonomous digital content production system

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,19 @@
+# OpenAI (obrigatório para geração de conteúdo)
 OPENAI_API_KEY=sk-...
+
+# Replicate (para geração de imagens)
 REPLICATE_API_TOKEN=r8_...
+
+# Instagram Graph API
 INSTAGRAM_ACCESS_TOKEN=...
 INSTAGRAM_ACCOUNT_ID=...
+
+# WhatsApp Business API
+WHATSAPP_PHONE_NUMBER_ID=...
+WHATSAPP_ACCESS_TOKEN=...
+
+# n8n Webhook
+N8N_WEBHOOK_URL=https://...
+
+# Modo automático
 AUTO_MODE=False
